<resources>
    <string name="app_name">SportBrains</string>
    <string name="app_version">1.1</string>
    <string name="quitter">Quitter</string>
    <string name="niveau">Niveau</string>
    <string name="defi_quotidien">Défi quotidien</string>
    <string name="quitterMessage">Êtes-vous sûr de vouloir quitter ?</string>
    <string name="cancel">Annuler</string>
    <string name="desc_profile_image">Image de profil</string>

    <string name="hello">Salut</string>
    <string name="paramètres">Paramètres</string>
    <string name="Musique">Musique</string>
    <string name="Son">Son</string>
    <string name="Langue">Langue</string>
    <string name="Commentaires">Commentaires</string>
    <string name="Supprimerlespub">Supprimer les publicités pop-up</string>

    <string name="Profil">Profil</string>
    <string name="NomUtilisation">Nom d\'utilisateur</string>

    <string name="Tâchesquotidiennes">Tâches quotidiennes</string>
    <string name="Effectuer8tâchesparjour">Effectuer 8 tâches par jour</string>
    <string name="Bravo">Tâches quotidiennes terminer</string>

    <!-- Tâches quotidiennes -->
    <string name="niveau_1">Terminer 1 niveau</string>
    <string name="niveau_5">Terminer 5 niveaux</string>
    <string name="niveau_10">Terminer 10 niveaux</string>
    <string name="niveau_15">Terminer 15 niveaux</string>
    <string name="niveau_20">Terminer 20 niveaux</string>

    <string name="etoil_3">Obtenir 3 étoiles</string>
    <string name="etoil_5">Obtenir 5 étoiles</string>"
    <string name="etoil_10">Obtenir 10 étoiles</string>
    <string name="etoil_15">Obtenir 15 étoiles</string>
    <string name="etoil_20">Obtenir 20 étoiles</string>

    <string name="depense_100">Dépenser 100 pièces</string>
    <string name="depense_200">Dépenser 200 pièces</string>
    <string name="depense_500">Dépenser 500 pièces</string>





    <style name="ExitDialogTheme" parent="Theme.MaterialComponents.DayNight.Dialog">
        <item name="android:windowBackground">@android:color/transparent</item>
        <item name="android:windowIsTranslucent">true</item>
        <item name="android:windowNoTitle">true</item>
    </style>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    status_icon
</resources>