<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    tools:context=".ExitActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@drawable/main_bg"
        android:padding="20dp"
        android:elevation="8dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quitter"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quitterMessage"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingBottom="20dp"/>

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/green_bg"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/btn_quit"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/quitter"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/button_red"
            android:layout_marginBottom="20dp" />

    </LinearLayout>
</RelativeLayout>
